src/libqgraphicsitem.bf

	[LinkName("QGraphicsItem_StackBefore")]
	public static extern void QGraphicsItem_StackBefore(void* c_this, QGraphicsItem sibling);
	[LinkName("QGraphicsItem_BoundingRect")]
	public static extern QRectF QGraphicsItem_BoundingRect(void* c_this);
	[LinkName("QGraphicsItem_ChildrenBoundingRect")]
	public static extern QRectF QGraphicsItem_ChildrenBoundingRect(void* c_this);
	[LinkName("QGraphicsItem_SceneBoundingRect")]
	public static extern QRectF QGraphicsItem_SceneBoundingRect(void* c_this);
	[LinkName("QGraphicsItem_Shape")]
	public static extern QPainterPath QGraphicsItem_Shape(void* c_this);
	[LinkName("QGraphicsItem_IsClipped")]
	public static extern bool QGraphicsItem_IsClipped(void* c_this);
	[LinkName("QGraphicsItem_ClipPath")]
	public static extern QPainterPath QGraphicsItem_ClipPath(void* c_this);
	[LinkName("QGraphicsItem_Contains")]
	public static extern bool QGraphicsItem_Contains(void* c_this, QPointF point);
	[LinkName("QGraphicsItem_CollidesWithItem")]
	public static extern bool QGraphicsItem_CollidesWithItem(void* c_this, QGraphicsItem other, int64 mode);
	[LinkName("QGraphicsItem_CollidesWithPath")]
	public static extern bool QGraphicsItem_CollidesWithPath(void* c_this, QPainterPath path, int64 mode);
	[LinkName("QGraphicsItem_CollidingItems")]
	public static extern QGraphicsItem[] QGraphicsItem_CollidingItems(void* c_this);
	[LinkName("QGraphicsItem_IsObscured")]
	public static extern bool QGraphicsItem_IsObscured(void* c_this);
	[LinkName("QGraphicsItem_IsObscured2")]
	public static extern bool QGraphicsItem_IsObscured2(void* c_this, double x, double y, double w, double h);
	[LinkName("QGraphicsItem_IsObscuredBy")]
	public static extern bool QGraphicsItem_IsObscuredBy(void* c_this, QGraphicsItem item);
	[LinkName("QGraphicsItem_OpaqueArea")]
	public static extern QPainterPath QGraphicsItem_OpaqueArea(void* c_this);
	[LinkName("QGraphicsItem_BoundingRegion")]
	public static extern QRegion QGraphicsItem_BoundingRegion(void* c_this, QTransform itemToDeviceTransform);
	[LinkName("QGraphicsItem_BoundingRegionGranularity")]
	public static extern double QGraphicsItem_BoundingRegionGranularity(void* c_this);
	[LinkName("QGraphicsItem_SetBoundingRegionGranularity")]
	public static extern void QGraphicsItem_SetBoundingRegionGranularity(void* c_this, double granularity);
	[LinkName("QGraphicsItem_Paint")]
	public static extern void QGraphicsItem_Paint(void* c_this, QPainter painter, QStyleOptionGraphicsItem option, QWidget widget);
	[LinkName("QGraphicsItem_Update")]
	public static extern void QGraphicsItem_Update(void* c_this);
	[LinkName("QGraphicsItem_Update2")]
	public static extern void QGraphicsItem_Update2(void* c_this, double x, double y, double width, double height);
	[LinkName("QGraphicsItem_Scroll")]
	public static extern void QGraphicsItem_Scroll(void* c_this, double dx, double dy);
	[LinkName("QGraphicsItem_MapToItem")]
	public static extern QPointF QGraphicsItem_MapToItem(void* c_this, QGraphicsItem item, QPointF point);
	[LinkName("QGraphicsItem_MapToParent")]
	public static extern QPointF QGraphicsItem_MapToParent(void* c_this, QPointF point);
	[LinkName("QGraphicsItem_MapToScene")]
	public static extern QPointF QGraphicsItem_MapToScene(void* c_this, QPointF point);
	[LinkName("QGraphicsItem_MapRectToItem")]
	public static extern QRectF QGraphicsItem_MapRectToItem(void* c_this, QGraphicsItem item, QRectF rect);
	[LinkName("QGraphicsItem_MapRectToParent")]
	public static extern QRectF QGraphicsItem_MapRectToParent(void* c_this, QRectF rect);
	[LinkName("QGraphicsItem_MapRectToScene")]
	public static extern QRectF QGraphicsItem_MapRectToScene(void* c_this, QRectF rect);
	[LinkName("QGraphicsItem_MapToItem4")]
	public static extern QPainterPath QGraphicsItem_MapToItem4(void* c_this, QGraphicsItem item, QPainterPath path);
	[LinkName("QGraphicsItem_MapToParentWithPath")]
	public static extern QPainterPath QGraphicsItem_MapToParentWithPath(void* c_this, QPainterPath path);
	[LinkName("QGraphicsItem_MapToSceneWithPath")]
	public static extern QPainterPath QGraphicsItem_MapToSceneWithPath(void* c_this, QPainterPath path);
	[LinkName("QGraphicsItem_MapFromItem")]
	public static extern QPointF QGraphicsItem_MapFromItem(void* c_this, QGraphicsItem item, QPointF point);
	[LinkName("QGraphicsItem_MapFromParent")]
	public static extern QPointF QGraphicsItem_MapFromParent(void* c_this, QPointF point);
	[LinkName("QGraphicsItem_MapFromScene")]
	public static extern QPointF QGraphicsItem_MapFromScene(void* c_this, QPointF point);
	[LinkName("QGraphicsItem_MapRectFromItem")]
	public static extern QRectF QGraphicsItem_MapRectFromItem(void* c_this, QGraphicsItem item, QRectF rect);
	[LinkName("QGraphicsItem_MapRectFromParent")]
	public static extern QRectF QGraphicsItem_MapRectFromParent(void* c_this, QRectF rect);
	[LinkName("QGraphicsItem_MapRectFromScene")]
	public static extern QRectF QGraphicsItem_MapRectFromScene(void* c_this, QRectF rect);
	[LinkName("QGraphicsItem_MapFromItem4")]
	public static extern QPainterPath QGraphicsItem_MapFromItem4(void* c_this, QGraphicsItem item, QPainterPath path);
	[LinkName("QGraphicsItem_MapFromParentWithPath")]
	public static extern QPainterPath QGraphicsItem_MapFromParentWithPath(void* c_this, QPainterPath path);
	[LinkName("QGraphicsItem_MapFromSceneWithPath")]
	public static extern QPainterPath QGraphicsItem_MapFromSceneWithPath(void* c_this, QPainterPath path);
	[LinkName("QGraphicsItem_MapToItem5")]
	public static extern QPointF QGraphicsItem_MapToItem5(void* c_this, QGraphicsItem item, double x, double y);
	[LinkName("QGraphicsItem_MapToParent2")]
	public static extern QPointF QGraphicsItem_MapToParent2(void* c_this, double x, double y);
	[LinkName("QGraphicsItem_MapToScene2")]
	public static extern QPointF QGraphicsItem_MapToScene2(void* c_this, double x, double y);
	[LinkName("QGraphicsItem_MapRectToItem2")]
	public static extern QRectF QGraphicsItem_MapRectToItem2(void* c_this, QGraphicsItem item, double x, double y, double w, double h);
	[LinkName("QGraphicsItem_MapRectToParent2")]
	public static extern QRectF QGraphicsItem_MapRectToParent2(void* c_this, double x, double y, double w, double h);
	[LinkName("QGraphicsItem_MapRectToScene2")]
	public static extern QRectF QGraphicsItem_MapRectToScene2(void* c_this, double x, double y, double w, double h);
	[LinkName("QGraphicsItem_MapFromItem5")]
	public static extern QPointF QGraphicsItem_MapFromItem5(void* c_this, QGraphicsItem item, double x, double y);
	[LinkName("QGraphicsItem_MapFromParent2")]
	public static extern QPointF QGraphicsItem_MapFromParent2(void* c_this, double x, double y);
	[LinkName("QGraphicsItem_MapFromScene2")]
	public static extern QPointF QGraphicsItem_MapFromScene2(void* c_this, double x, double y);
	[LinkName("QGraphicsItem_MapRectFromItem2")]
	public static extern QRectF QGraphicsItem_MapRectFromItem2(void* c_this, QGraphicsItem item, double x, double y, double w, double h);
	[LinkName("QGraphicsItem_MapRectFromParent2")]
	public static extern QRectF QGraphicsItem_MapRectFromParent2(void* c_this, double x, double y, double w, double h);
	[LinkName("QGraphicsItem_MapRectFromScene2")]
	public static extern QRectF QGraphicsItem_MapRectFromScene2(void* c_this, double x, double y, double w, double h);
	[LinkName("QGraphicsItem_IsAncestorOf")]
	public static extern bool QGraphicsItem_IsAncestorOf(void* c_this, QGraphicsItem child);
	[LinkName("QGraphicsItem_CommonAncestorItem")]
	public static extern QGraphicsItem QGraphicsItem_CommonAncestorItem(void* c_this, QGraphicsItem other);
	[LinkName("QGraphicsItem_IsUnderMouse")]
	public static extern bool QGraphicsItem_IsUnderMouse(void* c_this);
	[LinkName("QGraphicsItem_Data")]
	public static extern QVariant QGraphicsItem_Data(void* c_this, int32 key);
	[LinkName("QGraphicsItem_SetData")]
	public static extern void QGraphicsItem_SetData(void* c_this, int32 key, QVariant value);
	[LinkName("QGraphicsItem_InputMethodHints")]
	public static extern int64 QGraphicsItem_InputMethodHints(void* c_this);
	[LinkName("QGraphicsItem_SetInputMethodHints")]
	public static extern void QGraphicsItem_SetInputMethodHints(void* c_this, int64 hints);
	[LinkName("QGraphicsItem_Type")]
	public static extern int32 QGraphicsItem_Type(void* c_this);
	[LinkName("QGraphicsItem_InstallSceneEventFilter")]
	public static extern void QGraphicsItem_InstallSceneEventFilter(void* c_this, QGraphicsItem filterItem);
	[LinkName("QGraphicsItem_RemoveSceneEventFilter")]
	public static extern void QGraphicsItem_RemoveSceneEventFilter(void* c_this, QGraphicsItem filterItem);
	[LinkName("QGraphicsItem_UpdateMicroFocus")]
	public static extern void QGraphicsItem_UpdateMicroFocus(void* c_this);
	[LinkName("QGraphicsItem_SceneEventFilter")]
	public static extern bool QGraphicsItem_SceneEventFilter(void* c_this, QGraphicsItem watched, QEvent event);
	[LinkName("QGraphicsItem_SceneEvent")]
	public static extern bool QGraphicsItem_SceneEvent(void* c_this, QEvent event);
	[LinkName("QGraphicsItem_ContextMenuEvent")]
	public static extern void QGraphicsItem_ContextMenuEvent(void* c_this, QGraphicsSceneContextMenuEvent event);
	[LinkName("QGraphicsItem_DragEnterEvent")]
	public static extern void QGraphicsItem_DragEnterEvent(void* c_this, QGraphicsSceneDragDropEvent event);
	[LinkName("QGraphicsItem_DragLeaveEvent")]
	public static extern void QGraphicsItem_DragLeaveEvent(void* c_this, QGraphicsSceneDragDropEvent event);
	[LinkName("QGraphicsItem_DragMoveEvent")]
	public static extern void QGraphicsItem_DragMoveEvent(void* c_this, QGraphicsSceneDragDropEvent event);
	[LinkName("QGraphicsItem_DropEvent")]
	public static extern void QGraphicsItem_DropEvent(void* c_this, QGraphicsSceneDragDropEvent event);
	[LinkName("QGraphicsItem_FocusInEvent")]
	public static extern void QGraphicsItem_FocusInEvent(void* c_this, QFocusEvent event);
	[LinkName("QGraphicsItem_FocusOutEvent")]
	public static extern void QGraphicsItem_FocusOutEvent(void* c_this, QFocusEvent event);
	[LinkName("QGraphicsItem_HoverEnterEvent")]
	public static extern void QGraphicsItem_HoverEnterEvent(void* c_this, QGraphicsSceneHoverEvent event);
	[LinkName("QGraphicsItem_HoverMoveEvent")]
	public static extern void QGraphicsItem_HoverMoveEvent(void* c_this, QGraphicsSceneHoverEvent event);
	[LinkName("QGraphicsItem_HoverLeaveEvent")]
	public static extern void QGraphicsItem_HoverLeaveEvent(void* c_this, QGraphicsSceneHoverEvent event);
	[LinkName("QGraphicsItem_KeyPressEvent")]
	public static extern void QGraphicsItem_KeyPressEvent(void* c_this, QKeyEvent event);
	[LinkName("QGraphicsItem_KeyReleaseEvent")]
	public static extern void QGraphicsItem_KeyReleaseEvent(void* c_this, QKeyEvent event);
	[LinkName("QGraphicsItem_MousePressEvent")]
	public static extern void QGraphicsItem_MousePressEvent(void* c_this, QGraphicsSceneMouseEvent event);
	[LinkName("QGraphicsItem_MouseMoveEvent")]
	public static extern void QGraphicsItem_MouseMoveEvent(void* c_this, QGraphicsSceneMouseEvent event);
	[LinkName("QGraphicsItem_MouseReleaseEvent")]
	public static extern void QGraphicsItem_MouseReleaseEvent(void* c_this, QGraphicsSceneMouseEvent event);
	[LinkName("QGraphicsItem_MouseDoubleClickEvent")]
	public static extern void QGraphicsItem_MouseDoubleClickEvent(void* c_this, QGraphicsSceneMouseEvent event);
	[LinkName("QGraphicsItem_WheelEvent")]
	public static extern void QGraphicsItem_WheelEvent(void* c_this, QGraphicsSceneWheelEvent event);
	[LinkName("QGraphicsItem_InputMethodEvent")]
	public static extern void QGraphicsItem_InputMethodEvent(void* c_this, QInputMethodEvent event);
	[LinkName("QGraphicsItem_InputMethodQuery")]
	public static extern QVariant QGraphicsItem_InputMethodQuery(void* c_this, int64 query);
	[LinkName("QGraphicsItem_ItemChange")]
	public static extern QVariant QGraphicsItem_ItemChange(void* c_this, int64 change, QVariant value);
	[LinkName("QGraphicsItem_SupportsExtension")]
	public static extern bool QGraphicsItem_SupportsExtension(void* c_this, int64 _extension);
